--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@google/generative-ai": "^0.24.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-query": "^5.71.3",
+    "@tanstack/react-query-devtools": "^5.71.3",
     "lucide-react": "^0.485.0",
     "next": "15.2.2",
     "react": "^19.0.0",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
