added loading states

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-form": "^1.2.4",
     "@tanstack/react-query": "^5.71.3",
     "@tanstack/react-query-devtools": "^5.71.3",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.485.0",
     "next": "15.2.2",
     "react": "^19.0.0",
